# heap-allocator

./: .gitignore  CMakeLists.txt
include/: allocator.h
src/: allocator.c  internal.h
test/: main.c
